--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Adventures-of-Harry-Richmond-Volume-8_4451
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Adventure and adventurers -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: The Adventures of Harry Richmond — Volume 8
 url: http://www.gutenberg.org/ebooks/4451
